force-app/main/default/objects/FIN_AXSRuleCondition__c/FIN_AXSRuleCondition__c.object-meta.xml
<CustomObject>
    <label>AXS Rule Condition</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Rule Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AXS Rule Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>