force-app/main/default/objects/FIN_AXSRuleCondition__c/fields/FIN_Library_Association__c.field-meta.xml
<CustomField>
    <fullName>FIN_Library_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select this lookup value only when Related Object Attribute = Library Association</description>
    <inlineHelpText>Select this lookup value only when Related Object Attribute = Library Association</inlineHelpText>
    <label>Library Association</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>AXS Rule Conditions</relationshipLabel>
    <relationshipName>AXS_Rule_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>