force-app/main/default/objects/FIN_AXSRuleCondition__c/fields/FIN_Object__c.field-meta.xml
<CustomField>
    <fullName>FIN_Object__c</fullName>
    <description>AXSRuleEngine.object</description>
    <formula>TEXT(FIN_SortingRule__r.FIN_Object__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object</label>
    <type>Text</type>
</CustomField>