force-app/main/default/objects/FIN_AXSRuleCondition__c/fields/FIN_Object_Attribute_Formula__c.field-meta.xml
<CustomField>
    <fullName>FIN_Object_Attribute_Formula__c</fullName>
    <formula>Case(TEXT(FIN_RelatedObject__c) ,
&quot;Payment -&gt; Sales&quot; , $CustomMetadata.FIN_Object_and_Fields__mdt.Payment_Sales.Field_API_Name__c ,
&quot;Payment Distribution -&gt; Payment&quot; , $CustomMetadata.FIN_Object_and_Fields__mdt.Payment_Distribution_Payment.Field_API_Name__c ,
&quot;Payment Distribution -&gt; Sales&quot; , $CustomMetadata.FIN_Object_and_Fields__mdt.Payment_Distribution_Sales.Field_API_Name__c 
,&quot;&quot;) &amp;  TEXT(FIN_RelatedObjectAttribute__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Attribute_Formula</label>
    <type>Text</type>
</CustomField>