force-app/main/default/objects/FIN_AXSRuleCondition__c/fields/FIN_ObjectAttribute__c.field-meta.xml
<CustomField>
    <fullName>FIN_ObjectAttribute__c</fullName>
    <label>Object Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FIN_Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Processed_yn</fullName>
            </value>
            <value>
                <fullName>action_date</fullName>
            </value>
            <value>
                <fullName>channel</fullName>
            </value>
            <value>
                <fullName>client</fullName>
            </value>
            <value>
                <fullName>client_id</fullName>
            </value>
            <value>
                <fullName>client_name</fullName>
            </value>
            <value>
                <fullName>component_name</fullName>
            </value>
            <value>
                <fullName>context_id</fullName>
            </value>
            <value>
                <fullName>context_name</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
            <value>
                <fullName>current_paid_amount</fullName>
            </value>
            <value>
                <fullName>customer_account_num</fullName>
            </value>
            <value>
                <fullName>customer_id</fullName>
            </value>
            <value>
                <fullName>deposit_date</fullName>
            </value>
            <value>
                <fullName>distribution_amount</fullName>
            </value>
            <value>
                <fullName>distribution_amount_net_tax_amount</fullName>
            </value>
            <value>
                <fullName>distribution_amount_tax_amount</fullName>
            </value>
            <value>
                <fullName>distribution_amount_tax_included</fullName>
            </value>
            <value>
                <fullName>distribution_date</fullName>
            </value>
            <value>
                <fullName>entity</fullName>
            </value>
            <value>
                <fullName>entity_id</fullName>
            </value>
            <value>
                <fullName>entity_name</fullName>
            </value>
            <value>
                <fullName>event_build_date</fullName>
            </value>
            <value>
                <fullName>event_description</fullName>
            </value>
            <value>
                <fullName>event_end_date</fullName>
            </value>
            <value>
                <fullName>event_id</fullName>
            </value>
            <value>
                <fullName>event_lookup</fullName>
            </value>
            <value>
                <fullName>event_name</fullName>
            </value>
            <value>
                <fullName>event_start_date</fullName>
            </value>
            <value>
                <fullName>event_zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>