force-app/main/default/objects/FIN_AXSRuleCondition__c/fields/FIN_RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>FIN_RelatedObject__c</fullName>
    <label>Related Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FIN_Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FIN_PaymentDistribution__c</fullName>
                <label>Payment Distribution --&gt; Payment Distribution</label>
            </value>
            <value>
                <fullName>Payment Distribution -&gt; Payment</fullName>
            </value>
            <value>
                <fullName>Payment Distribution -&gt; Sales</fullName>
            </value>
            <value>
                <fullName>FIN_Payment__c</fullName>
                <label>Payment -&gt; Payment</label>
            </value>
            <value>
                <fullName>Payment -&gt; Sales</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
                <label>Sales -&gt; Sales</label>
            </value>
            <value>
                <fullName>SBQQ__ContractedPrice__c</fullName>
                <label>Library Association</label>
            </value>
            <value>
                <fullName>Sales Transactions</fullName>
                <label>Sales Transaction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>