force-app/main/default/objects/FIN_AXSRuleCondition__c/fields/FIN_RelatedObject_DELETE__c.field-meta.xml
<CustomField>
    <fullName>FIN_RelatedObject_DELETE__c</fullName>
    <label>Destination Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FIN_Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Distribution</fullName>
            </value>
            <value>
                <fullName>Payment Distribution -&gt; Payment</fullName>
            </value>
            <value>
                <fullName>Payment Distribution -&gt; Sales</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
                <label>Payment -&gt; Payment</label>
            </value>
            <value>
                <fullName>Payment -&gt; Sales</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
                <label>Sales -&gt; Sales</label>
            </value>
            <value>
                <fullName>Library Association</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Company Code</fullName>
            </value>
            <value>
                <fullName>(Entity) Context</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>(Sales) Context</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>(Event) Venue</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Chart of Accounts</fullName>
            </value>
            <value>
                <fullName>Consumption Schedule</fullName>
            </value>
            <value>
                <fullName>(Library Association) Context</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Fee Component</fullName>
            </value>
            <value>
                <fullName>Financial Code</fullName>
            </value>
            <value>
                <fullName>Payee</fullName>
            </value>
            <value>
                <fullName>Remittance Account</fullName>
            </value>
            <value>
                <fullName>Revenue Center (Enriched)</fullName>
            </value>
            <value>
                <fullName>Statistical Chart of Accounts</fullName>
            </value>
            <value>
                <fullName>Subledger Code</fullName>
            </value>
            <value>
                <fullName>LibraryAssociation__r.Venue__r</fullName>
                <label>(Library Association) Venue</label>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>