force-app/main/default/objects/FIN_AXSRuleCondition__c/fields/FIN_RelatedObjectAttribute__c.field-meta.xml
<CustomField>
    <fullName>FIN_RelatedObjectAttribute__c</fullName>
    <label>Related Object Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FIN_RelatedObject__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>FIN_PaymentContextID__c</fullName>
                <label>(Payment) Context ID</label>
            </value>
            <value>
                <fullName>FIN_PaymentDepositDate__c</fullName>
                <label>Deposit Date</label>
            </value>
            <value>
                <fullName>FIN_PaymentOutlet__c</fullName>
                <label>(Payment) Outlet</label>
            </value>
            <value>
                <fullName>FIN_PaymentAmount__c</fullName>
                <label>Payment Amount</label>
            </value>
            <value>
                <fullName>FIN_PaymentDate__c</fullName>
                <label>Payment Date</label>
            </value>
            <value>
                <fullName>FIN_PaymentName__c</fullName>
                <label>Payment Name</label>
            </value>
            <value>
                <fullName>FIN_PaymentPlanName__c</fullName>
                <label>Payment Plan Name</label>
            </value>
            <value>
                <fullName>FIN_PaymentRemark__c</fullName>
                <label>(Payment) Remark</label>
            </value>
            <value>
                <fullName>FIN_PaymentTransactionId__c</fullName>
                <label>Transaction Id</label>
            </value>
            <value>
                <fullName>Account Name</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>Account Source</fullName>
            </value>
            <value>
                <fullName>FIN_ClientID__c</fullName>
                <label>Client ID</label>
            </value>
            <value>
                <fullName>Entity ID</fullName>
            </value>
            <value>
                <fullName>Legal Name</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Venue ID</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Code</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>End Date</fullName>
            </value>
            <value>
                <fullName>Start Date</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>FIN_PaymentContext__c</fullName>
                <label>Context</label>
            </value>
            <value>
                <fullName>Current Schema</fullName>
            </value>
            <value>
                <fullName>Short Name</fullName>
            </value>
            <value>
                <fullName>FIN_AdjustmentAmount__c</fullName>
                <label>Adjustment Amount</label>
            </value>
            <value>
                <fullName>FIN_Channel__c</fullName>
                <label>Channel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>