force-app/main/default/objects/FIN_AXSRuleCondition__c/recordTypes/AXS_Rule_Condition_Settlement_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>AXS_Rule_Condition_Settlement_Record_Type</fullName>
    <active>true</active>
    <label>AXS Rule Condition Settlement Record Type</label>
</RecordType>