force-app/main/default/objects/FIN_AXSRuleCondition__c/validationRules/ObjectSameToAXSRuleEngines.validationRule-meta.xml
<ValidationRule>
    <fullName>ObjectSameToAXSRuleEngines</fullName>
    <active>false</active>
    <description>Object must be same as on AXS Rule Engine</description>
    <errorConditionFormula>TEXT(FIN_Object__c) != TEXT(FIN_SortingRule__r.FIN_Object__c)</errorConditionFormula>
    <errorDisplayField>FIN_Object__c</errorDisplayField>
    <errorMessage>Object must be same as on AXS Rule Engine</errorMessage>
</ValidationRule>