force-app/main/default/objects/FIN_AXSRuleCondition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Object__c</columns>
    <columns>FIN_ObjectAttribute__c</columns>
    <columns>FIN_Operator__c</columns>
    <columns>FIN_Value__c</columns>
    <columns>FIN_RelatedObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>